commented the .hgignore file

--- a/.hgignore
+++ b/.hgignore
@@ -1,10 +1,14 @@
 \.pdf$
 \.html$
 \.orig$
+.m.dependencies
+
+# do not include info and pics directory 
 ^info/
-^info$
 ^pics/
-^pics$
-^saved/
+
+# do not include pax archives
 .pax$
+
+# do not include working directories ...
 .ps.depend/
